2009-03-07 Denton Woods <doomwiz@users.sf.net>
	* Updated version numbers to 1.7.8 project-wide.
	* DevIL_manual.texi: Added several file formats to the appendix.
	* il_io.c: Updated Doxygen comments to loading/saving functions.

2009-03-06 Denton Woods <doomwiz@users.sf.net>
	* Updated VC8 projects to use il_mp3.c.
	* il.h: Added description to IL_WDP.

2009-03-05 Denton Woods <doomwiz@users.sf.net>
	* il_mp3.c: Added this file.
	* il_io.c: Added loading calls for .mp3 files.
	* il_internal.h: Added .mp3 loading declarations.
	* Makefile.am: Added il_mp3.c to source line.
	* il.h: Added IL_MP3 define.

2009-03-04 Denton Woods <doomwiz@users.sf.net>
	* il_utx.cpp: Started cleanup of file using C++ constructs.
	* Updated VC8 projects to use il_utx.cpp.

2009-03-03 Denton Woods <doomwiz@users.sf.net>
	* ilu_error-french.h: Added French translation of errors.
	* ilu.h: Added ILU_FRENCH define.
	* Changed il_utx.c to il_utx.cpp.

2009-03-02 Denton Woods <doomwiz@users.sf.net>
	* il_utx.c: Added DXT1 loading in UTX files.
	* il_utx.h: Added this file.
	* lib/Makefile.am: Added il_utx.h to include line.
	* il_utx.c: Fixed loading of larger images.
	* windows_example.rc: Fixed accelerator for menu.

2009-03-01 Denton Woods <doomwiz@users.sf.net>
	* il_utx.c: Added this file.
	* lib/Makefile.am: Added il_utx.c to source line.
	* il_internal.h: Added .utx loading declarations.
	* il_io.c: Added loading calls for .utx files.
	
2009-02-28 Denton Woods <doomwiz@users.sf.net>
	* il_states.c / il_states.h: Added ilVtfCompression to IL_STATES.
	* il_vtf.c: Added more formats to saving.
	* il.h: Added IL_VTF_COMP define.
	* il_io.c: Added saving calls for .vtf files.
	* il_dds.c: Added DecompressARGB16 to load a2r10g10b10 and a2b10g10r10 formats.
	* il_convbuff (iSwitchTypes): Added several missing break statements.
	* il_convbuff:1988: Changed to check types instead of bpc.

2009-02-27 Denton Woods <doomwiz@users.sf.net>
	* il_dpx.c / il_dpx.h: Got basic dpx loading working.