@@ -23,19 +23,21 @@ ILconst_string _ilVendor		= IL_TEXT("Abysmal Software");
 ILconst_string _ilVersion		= IL_TEXT("Developer's Image Library (DevIL) 1.7.8");
 
 
-char* _ilLoadExt		= "" IL_BMP_EXT IL_CUT_EXT IL_DCX_EXT IL_DDS_EXT
-									IL_EXR_EXT IL_GIF_EXT IL_HDR_EXT IL_ICNS_EXT
-									IL_ICO_EXT IL_IFF_EXT IL_JPG_EXT IL_JP2_EXT
-									IL_LIF_EXT IL_MDL_EXT IL_MNG_EXT IL_PCD_EXT
-									IL_PCX_EXT IL_PIC_EXT IL_PIX_EXT IL_PNG_EXT
-									IL_PNM_EXT IL_PSD_EXT IL_PSP_EXT IL_PXR_EXT
-									IL_RAW_EXT IL_SGI_EXT IL_SUN_EXT IL_TGA_EXT
-									IL_TIF_EXT IL_VTF_EXT IL_WAL_EXT IL_XPM_EXT;
+char* _ilLoadExt		= "" IL_BLP_EXT IL_BMP_EXT IL_CUT_EXT IL_DCX_EXT IL_DDS_EXT
+									IL_DCM_EXT IL_DPX_EXT IL_EXR_EXT IL_FITS_EXT IL_FTX_EXT
+									IL_GIF_EXT IL_HDR_EXT IL_ICNS_EXT IL_ICO_EXT IL_IFF_EXT
+									IL_IWI_EXT IL_JPG_EXT IL_JP2_EXT IL_LIF_EXT IL_MDL_EXT
+									IL_MNG_EXT IL_MP3_EXT IL_PCD_EXT IL_PCX_EXT IL_PIC_EXT
+									IL_PIX_EXT IL_PNG_EXT IL_PNM_EXT IL_PSD_EXT IL_PSP_EXT
+									IL_PXR_EXT IL_RAW_EXT IL_ROT_EXT IL_SGI_EXT IL_SUN_EXT
+									IL_TEX_EXT IL_TGA_EXT IL_TIF_EXT IL_TPL_EXT IL_UTX_EXT
+									IL_VTF_EXT IL_WAL_EXT IL_WDP_EXT IL_XPM_EXT;
 
 char* _ilSaveExt		= "" IL_BMP_EXT IL_CHEAD_EXT IL_DDS_EXT IL_EXR_EXT
 									IL_HDR_EXT IL_JP2_EXT IL_JPG_EXT IL_PCX_EXT
 									IL_PNG_EXT IL_PNM_EXT IL_PSD_EXT IL_RAW_EXT
-									IL_SGI_EXT IL_TGA_EXT IL_TIF_EXT IL_WBMP_EXT;
+									IL_SGI_EXT IL_TGA_EXT IL_TIF_EXT IL_VTF_EXT
+									IL_WBMP_EXT;
 
 
 //! Set all states to their defaults.
